# fil_bench

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
include/fil_bench/: array_types.hpp  constants.hpp  datagen.hpp  fwd_decl.hpp  launch_config.hpp  raft_handle.hpp  runner.hpp  tuner.hpp
src/: datagen.cu  launch_config.cpp  main.cpp  raft_handle.cpp  runner.cpp  runner_cli.cpp  tuner.cpp  tuner_cli.cpp
